# MultiChannelSampler

./: .clang-format  CMakeLists.txt  README.md
protobuf/: schema.proto
src/: Main.cpp  app.cpp  app.h  error.h  processor.cpp  processor.h
